LSP-940: write java compiler options into workspace model for LSP
Merge-request: IJ-MR-208736
Merged-by: Aleksandr Bubenchikov <alexander.bubenchikov@jetbrains.com>

GitOrigin-RevId: 9c7fe265a0e281c108dba6f60a19397bbe1a543a